Align Logo + some fixes

--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ div.d-flex {
 .btn-group-lg>.btn, .btn-lg {
     border-radius: 0;
     border-width: 3px;
+    width: 100%;
 }
 
 div.mx-auto > h2 {
@@ -45,4 +46,8 @@ header {
 section {
     padding: 150px 0;
 }
-  
+
+/* Game Logo */
+#game-logo {
+    width: 75%;
+}
